--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/book-management/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/book-management/BookApp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style> @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap'); </style>
     
     <title>Manage Books - Dardan</title>
-    <script type="module" crossorigin src="/book-management/assets/index.fccfdd66.js"></script>
+    <script type="module" crossorigin src="/book-management/assets/index.b3d68219.js"></script>
     <link rel="stylesheet" href="/book-management/assets/index.916fedfa.css">
   </head>
   <body>
